Bug fixes and added latest data functionality

--- a/src/app/resources-list/dataset-desc/dataset-desc.component.html
+++ b/src/app/resources-list/dataset-desc/dataset-desc.component.html
@@ -26,9 +26,9 @@
   <h3>Schema</h3>
   <a [href]="dataset.schema" target="_blank"
      class="schema-container">{{dataset.schema}}</a>
-  <div class="flex" *ngIf="dataset.accessPolicy === 'SECURE'">
+  <!--<div class="flex" *ngIf="dataset.accessPolicy === 'SECURE'">
     <a (click)="openRequestAccess($event)">Request dataset</a>
-  </div>
+  </div>-->
   <div class="flex link-holder">
     <div *ngIf="dataset.dataSampleFile">
       <img src="assets/download.svg"/>
