--- a/src/app/global/menu/menu.component.html
+++ b/src/app/global/menu/menu.component.html
@@ -58,7 +58,7 @@
       <ul class="links-secondary">
         <li><a (click)="closePopup()" href="https://iudx.org.in/"
                target="_blank">About IUDX</a></li>
-        <li><a href="" (click)="closePopup()">Become a publisher</a></li>
+        <li><a href="" (click)="navigateToProviderPanel()">Become a publisher</a></li>
       </ul>
     </div>
   </div>
