--- a/src/app/landing/provider/provider.component.html
+++ b/src/app/landing/provider/provider.component.html
@@ -6,7 +6,7 @@
       digital experience.
     </p>
     <div class="buttons">
-      <button class="btn ghost">
+      <button class="btn ghost" (click)="navigateToProviderPanel()">
         Login/Register
       </button>
     </div>
