--- a/src/app/resources-list/dataset-desc/dataset-desc.component.html
+++ b/src/app/resources-list/dataset-desc/dataset-desc.component.html
@@ -14,9 +14,9 @@
     <!-- <div class="info"><img src="./../../../assets/eye.svg" />{{dataset.views}}</div> -->
     <div class="info"><img
       src="./../../../assets/bracket.svg"/>{{dataset.resources}} resources</div>
-    <div class="info" *ngIf="dataset.dataSampleFile">
+    <!--<div class="info" *ngIf="dataset.dataSampleFile">
       <img [src]="getIconForSampleFile(dataset.dataSampleFile)"/>{{getTextForSampleFile(dataset.dataSampleFile)}}
-    </div>
+    </div>-->
   </ul>
   <h3>Publisher</h3>
   <div class="pub-container flex">
