Added Login functionality to login popup

--- a/src/app/global/login-popup/login-popup.component.html
+++ b/src/app/global/login-popup/login-popup.component.html
@@ -11,7 +11,7 @@
       this request.
     </p>
     <div class="buttons">
-      <button>Login/Register</button>
+      <button (click)="loggedIn()">Login/Register</button>
       <div class="cancel" (click)="closePopup()">Cancel</div>
     </div>
   </div>
