Added a fixes in login popup

--- a/src/app/global/login-popup/login-popup.component.html
+++ b/src/app/global/login-popup/login-popup.component.html
@@ -1,13 +1,13 @@
 <div class="overlay"></div>
 <div class="popup">
   <div class="head">
-    <h2>Login needed</h2>
+    <h2>Authentication Needed</h2>
     <img (click)="closePopup()" src="assets/close.svg">
   </div>
   <div class="body">
     <span>Login/Register</span>
     <p>
-      Please sign in or sing up into your IUDX accounts panel to continue with
+      Please login or register into your IUDX accounts panel to continue with
       this request.
     </p>
     <div class="buttons">
