--- a/src/app/landing/home/home.component.html
+++ b/src/app/landing/home/home.component.html
@@ -112,7 +112,7 @@
 
   <!-- usps section -->
 
-  <app-usps></app-usps>
+  <!-- <app-usps></app-usps> -->
 
   <!-- testimonials section -->
 
@@ -120,7 +120,7 @@
 
   <!-- provider section -->
 
-  <app-provider></app-provider>
+  <!-- <app-provider></app-provider> -->
 
   <!-- knowledge hub section -->
 
