GS map api added and reuqest data function added

--- a/src/app/resource-card/resource-card.component.html
+++ b/src/app/resource-card/resource-card.component.html
@@ -24,12 +24,12 @@
         <img src="/assets/eye.svg"/>
         <span>View Latest Data</span>
       </div>
-      <!--<div
+      <div
         *ngIf="resource.resourceType == 'GSLAYER' && resource.dataDescriptor?.location.dataSchema == 'iudx:Point'"
         class="col col-left">
         <img src="./../../../assets/map.svg"/>
         <span (click)="openGsMap(resource)">Map view</span>
-      </div>-->
+      </div>
       <div (click)="copy()" class="col col-left">
         <img src="assets/copy-dark.svg"/>
         <span>Copy resource ID</span>
