Geo query option hidden

--- a/src/app/geo-query/geo-map/geo-map.component.html
+++ b/src/app/geo-query/geo-map/geo-map.component.html
@@ -1,4 +1,4 @@
-<div class="map">
+<!--<div class="map">
   <div class="map_container"
        id="map" leaflet (leafletMapReady)="on_map_ready($event)"
        leafletDraw
@@ -6,5 +6,11 @@
        (leafletDrawCreated)="onDrawCreated($event)"
        [leafletOptions]="leaflet_options">
     <div [leafletLayer]="drawItems"></div>
+  </div>
+</div>-->
+<div class="map">
+  <div class="map_container"
+       id="map" leaflet (leafletMapReady)="on_map_ready($event)"
+       [leafletOptions]="leaflet_options">
   </div>
 </div>
