Footer css changed for img spacing

--- a/src/app/global/footer/footer.component.scss
+++ b/src/app/global/footer/footer.component.scss
@@ -43,18 +43,23 @@ footer {
     align-items: center;
 
 
-
     .flex-parent {
       display: flex;
       width: 30%;
       justify-content: space-between;
-      a {
-        align-self: center;
 
-        &:not(:last-child) {
-          margin-right: 30px;
+      img {
+        margin-right: 30px;
+
+        &.iisc-logo {
+          margin: 0;
         }
       }
+
+      a {
+        align-self: center;
+      }
+
       img {
 
       }
